--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer">
-          <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="Reviewer">
+          <img src="Assets/avatar.png" alt="Reviewer">
           <div>
             <p><strong>Sara</strong></p>
             <p>Date</p>
@@ -62,7 +62,7 @@
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer">
-          <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="Reviewer">
+          <img src="Assets/avatar.png" alt="Reviewer">
           <div>
             <p><strong>Rubi</strong></p>
             <p>Date</p>
@@ -74,7 +74,7 @@
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer">
-          <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="Reviewer">
+          <img src="Assets/avatar.png" alt="Reviewer">
           <div>
             <p><strong>Jane</strong></p>
             <p>Date</p>
@@ -89,7 +89,7 @@
     <p>Make your dreams with the help of the best.</p>
     <button class="primary-btn">Get Started Free</button>
     <div class="image-container">
-      <img src="B12A01-landing-launchpad/Assets/wc-big.png" alt="Webflow Conf 2022" />
+      <img src="Assets/wc-big.png" alt="Webflow Conf 2022" />
     </div>
   </section>
 
