--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button class="primary-btn">Launch Live Preview</button>
     </div>
     <div class="banner-image">
-      <img src="B12A01-landing-launchpad/Assets/wc-mini.png" alt="Webflow Conf 2022 Preview" />
+      <img src="Assets/wc-mini.png" alt="Webflow Conf 2022 Preview" />
     </div>
   </section>
 
@@ -46,7 +46,7 @@
     <h2>What our users say</h2>
     <div class="testimonial-cards">
       <div class="card">
-        <div class="stars">★★★★★</div>
+        <div class="stars"><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""></div>
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer">
