--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </div>
       </div>
       <div class="card">
-        <div class="stars">★★★★★</div>
+        <div class="stars"><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""></div>
         <h3>Loved by Designers</h3>
-        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+        <p>Best In the town</p>
         <div class="reviewer">
           <img src="Assets/avatar.png" alt="Reviewer">
           <div>
@@ -70,9 +70,9 @@
         </div>
       </div>
       <div class="card">
-        <div class="stars">★★★★★</div>
+        <div class="stars"><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""></div>
         <h3>Loved by Designers</h3>
-        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+        <p>Best In the town</p>
         <div class="reviewer">
           <img src="Assets/avatar.png" alt="Reviewer">
           <div>
